<resources>
    <string name="app_name">TravelExpense</string>
    <string name="distancia">Distancia</string>
    <string name="total_de_quilometros">Total de quilometros</string>
    <string name="preco">Preço</string>
    <string name="autonomia">Autonomia</string>
    <string name="preco_litro">Preço por litro</string>
    <string name="kms_por_litro">KMs por litro</string>
    <string name="gasto_get_msg">Seu gasto total será de:</string>
    <string name="valor_total">r$ 0</string>
    <string name="fill_all_filter">Preencha todos os campos.</string>
</resources>